Fix last updated date wrapping
Last updated date is composed of 3 white space separated elements that wrap on new lines in default conditions. Given we know this column will always be the last one in the table we add an app-level overwrite to not wrap the cell content for this column.

--- a/app/assets/stylesheets/utilities/_overrides.scss
+++ b/app/assets/stylesheets/utilities/_overrides.scss
@@ -94,5 +94,9 @@
     .govuk-table__cell {
       @include govuk-font(16);
     }
+
+    .govuk-table__cell:last-child {
+      white-space: nowrap;
+    }
   }
 }
